# mindX-mindRacing

./: .gitattributes  .gitignore  CLAUDE.md  README.md
.claude/: settings.json
.claude/commands/: add-ins-estimator.md  implement-seam.md  prime.md
analysis/: README.md
backend/: README.md  pyproject.toml
backend/configs/: default.yaml  montage_demo.yaml
backend/mindx_hnf/: __init__.py  contracts.py  orchestrator.py
backend/mindx_hnf/api/: __init__.py  sink.py
backend/mindx_hnf/feedback/: __init__.py  mapper.py
backend/mindx_hnf/ins/: __init__.py  coherence.py
backend/mindx_hnf/io/: __init__.py  sources.py
backend/mindx_hnf/preprocessing/: __init__.py  montage.py  online.py
backend/mindx_hnf/scripts/: __init__.py  simulate.py
backend/mindx_hnf/session/: __init__.py  protocol.py
backend/mindx_hnf/storage/: __init__.py  recorder.py
backend/tests/: test_ins.py  test_loop_and_safety.py  test_lsl_outlet.py  test_montage_mbll.py  test_session_mode.py  test_sham_integrity.py
docs/: ARCHITECTURE.md  DECISIONS.md  GLOSSARY.md  LSL_UNITY_SETUP.md  MNE_ONLINE_SCOPE.md  O5_MULTIPLAYER_SCOPE.md  PROTOCOL.md  UBIQ_SETUP.md
unity/: .gitignore  KEEP_DELETE.md  QUEST2_SETUP.md  README.md  XR_SETUP.md
unity/Assets/: PhotonManager.cs
unity/Assets/CarControll/: Car Controll.prefab  CarController.cs
unity/Assets/CarControll/Materials/: AFRC_Env_Mat.mat
unity/Assets/CarControll/Prefabs (With Colliders)/: Free Racing Car.prefab
unity/Assets/Editor/: MindXSceneScaffold.cs
unity/Assets/Scenes/: MindXRacing.unity
unity/Assets/Scenes/_Reference/: PhotonConnection.unity
unity/Assets/Scripts/: CalibrationUIController.cs  CarDriver.cs  ColocationRegistration.cs  FeedbackReceiver.cs  ICarInput.cs  ISharedCarNetwork.cs  KeyboardCarInput.cs  LslFeedbackTransport.cs  SharedCarAuthority.cs  SharedCarSpawner.cs  UbiqSharedCarNetwork.cs  XRCarController.cs
unity/Assets/XR/Settings/: Open XR Package Settings.asset
unity/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
(+72 files in other folders)
