[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mindx-hnf"
version = "0.1.0"
description = "fNIRS Hyperscanning-Neurofeedback real-time backend (mindX / START-program)"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "pyyaml>=6.0",
    "mne>=1.6",      # ONLINE Beer-Lambert MBLL numerics (D10), + offline oracle
    "scipy>=1.11",   # signal math backing mne / causal filters
]

[project.optional-dependencies]
hardware = ["pylsl>=1.16"]   # real LSL streams (NIRSport2, movisens)
analysis = ["pymc>=5.0", "arviz>=0.18"]  # offline-only heavy stats (WP5)
dev = ["pytest>=8.0", "ruff>=0.4", "black>=24.0", "mypy>=1.9"]

[project.scripts]
mindx-simulate = "mindx_hnf.scripts.simulate:main"

[tool.setuptools.packages.find]
include = ["mindx_hnf*"]

[tool.ruff]
line-length = 90
target-version = "py311"

# These ship no type stubs / py.typed marker; don't fail mypy on their imports.
[[tool.mypy.overrides]]
module = ["pylsl", "mne", "mne.*", "yaml"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
